# python-kurs

./: .gitignore  README.md  setups.md  snake_game.py
Aufgaben/: fizzBuzz.md  ha.py
Aufgaben/html/: index.html
Lösungen/: fizzbuzz.py
ThemenLektionen/: codeformattingpep8.md  expressions.md  git.md  pygame.md  setups.md  sshKey.md  variables.md
dd/: MANIFEST.in  README.md  setup.cfg  setup.py
dd/dd/: __main__.py
dd/dd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
dd/docs/: conf.py  index.rst  reference.rst
hausaufgaben.py/: lesson26.py  vadim11.py  vadim12.py  vadim15.py  vadim16.py  vadim18,18,18.py  vadim18,18.py  vadim18.py  vadim19.py  vadim2,2,2.py  vadim2,2.py  vadim2.py  vadim22.py  vadim23.py  vadim29.py
hausaufgaben.py/chatgpt.py/: chatgpt12.py  chatgpt18.py  chatgpt2.py
lesson5.py/: main.py
lesson6.py/: main.py  main2.py  main3.py
